Overflow header fix

--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,7 @@ body {
   text-align: justify;
   }
 header, nav, article, footer {
-  width: 700px;
+  /* width: 700px; */
   margin:0 auto;
   }
 article {
